# SeAPI

./: README.md  pyproject.toml  requirements.txt  setup.py
SeAPI/: se_addresses.py  se_carriers.py  se_labels.py  se_pickups.py  se_request.py  se_tracking.py  se_webhooks.py
src/SeAPI/: se_addresses.py  se_carriers.py  se_labels.py  se_main.py  se_pickups.py  se_request.py  se_tracking.py  se_webhooks.py
